# Mithril snapshot fetcher module

[package]
name = "acropolis_module_mithril_snapshot_fetcher"
version = "0.1.0"
edition = "2021"
authors = ["Paul Clark <paul.clark@iohk.io>"]
description = "Mithril snapshot fetcher Caryatid module for Acropolis"
license = "Apache-2.0"

[dependencies]
acropolis_common = { path = "../../common" }
acropolis_codec = { path = "../../codec" }

caryatid_sdk = { workspace = true }

anyhow = { workspace = true }
async-trait = "0.1.86"
chrono = { workspace = true }
config = { workspace = true }
mithril-client = { version = "0.12", features = ["fs"] }
mithril-common = { version = "0.6.17" }
pallas = { workspace = true, features = ["hardano"] }
pallas-traverse = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemalloc-ctl = "0.6.1"

[lib]
path = "src/mithril_snapshot_fetcher.rs"
