# Acropolis Protocol Parameters State Module

[package]
name = "acropolis_module_parameters_state"
version = "0.1.0"
edition = "2021"
authors = ["Dmitry Shtukenberg <dmitry.shtukenberg@iohk.io>"]
description = "Protocol Parameters Tracker"
license = "Apache-2.0"
build = "build.rs"

[dependencies]
acropolis_common = { path = "../../common" }

caryatid_sdk = { workspace = true }

anyhow = { workspace = true }
async-trait = "0.1"
blake2 = "0.10.6"
config = { workspace = true }
hex = { workspace = true }
num-rational = "0.4.2"
pallas = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
base64 = "0.22.1"

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }

[lib]
path = "src/parameters_state.rs"
